--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
----<div id='protege:defaultLanguage'>
+---
+<div id='protege:defaultLanguage'>
 <h2><a href='#protege:defaultLanguage'>protege:defaultLanguage</a></h2>
 <b>obo:IAO_0000114</b> rdf:type</br>
 </div></br>
