--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href="dicom.html" class="btn">DICOM</a>
     <a href="sio.html" class="btn">SIO</a>
     <a href="obo.html" class="btn">OBO</a>
+    <a href="onli.html" class="btn">ONLI</a>
     <a href="https://github.com/wolfborg/nidm" class="btn">View on GitHub</a>
   </section>
 
@@ -133,7 +134,7 @@
             <section id="acquisition">
                 <h1 label="Acquisition">nidm:'Acquisition'</h1>
                 <div class="glossary-ref">
-                    <a title="Acquisition" href ="#acquisition"><dfn title="Acquisition" href ="#acquisition">nidm:'Acquisition'</dfn></a>: An acquisition is an activty in which data about a subject is gathered.<p> <a title="Acquisition" href ="#acquisition">nidm:'Acquisition'</a> is a prov:Activity and  has the following children: <a title="Series" href ="#series">nidm:'Series'</a>, <a title="instrument-based-assessment" href ="http://neurolog.unice.fr/ontoneurolog/v3.0/instrument.owl#instrument-based-assessment">onli:instrument-based-assessment</a>, <a title="variable-assessment" href ="http://neurolog.unice.fr/ontoneurolog/v3.0/instrument.owl#variable-assessment">onli:variable-assessment</a>.</p><p>Type: Class</p><p>Curation Status: obo:'requires discussion'</p>
+                    <a title="Acquisition" href ="#acquisition"><dfn title="Acquisition" href ="#acquisition">nidm:'Acquisition'</dfn></a>: An acquisition is an activty in which data about a subject is gathered.<p> <a title="Acquisition" href ="#acquisition">nidm:'Acquisition'</a> is a prov:Activity and  has the following children: <a title="Series" href ="#series">nidm:'Series'</a>, <a title="instrument-based-assessment" href ="./onli.html#instrument-based-assessment">onli:instrument-based-assessment</a>, <a title="variable-assessment" href ="./onli.html#variable-assessment">onli:variable-assessment</a>.</p><p>Type: Class</p><p>Curation Status: obo:'requires discussion'</p>
                 </div>
             </section>
             <!-- nidm:'Data Processing' (DataProcessing) -->
@@ -203,7 +204,7 @@
             <section id="acquisitionobject">
                 <h1 label="AcquisitionObject">nidm:'Acquisition Object'</h1>
                 <div class="glossary-ref">
-                    <a title="AcquisitionObject" href ="#acquisitionobject"><dfn title="AcquisitionObject" href ="#acquisitionobject">nidm:'Acquisition Object'</dfn></a>: An acquisition object is an entity that is gathered from a subject during an acquisition activity.<p> <a title="AcquisitionObject" href ="#acquisitionobject">nidm:'Acquisition Object'</a> is a prov:'Entity' and  has the following children: <a title="ProcessedAcquisitionObject" href ="#processedacquisitionobject">nidm:'Processed Acquisition Object'</a>, <a title="RawAcquisitionObject" href ="#rawacquisitionobject">nidm:'Raw Acquisition Object'</a>, <a title="ReconstructedAcquisitionObject" href ="#reconstructedacquisitionobject">nidm:'Reconstructed Acquisition Object'</a>, <a title="assessment-instrument" href ="http://neurolog.unice.fr/ontoneurolog/v3.0/instrument.owl#assessment-instrument">onli:assessment-instrument</a>, <a title="instrument-variable" href ="http://neurolog.unice.fr/ontoneurolog/v3.0/instrument.owl#instrument-variable">onli:instrument-variable</a>.</p><p>Type: Class</p><p>Curation Status: obo:'requires discussion'</p><p>Editor: http://purl.org/nicholsn/card.ttl</p>
+                    <a title="AcquisitionObject" href ="#acquisitionobject"><dfn title="AcquisitionObject" href ="#acquisitionobject">nidm:'Acquisition Object'</dfn></a>: An acquisition object is an entity that is gathered from a subject during an acquisition activity.<p> <a title="AcquisitionObject" href ="#acquisitionobject">nidm:'Acquisition Object'</a> is a prov:'Entity' and  has the following children: <a title="ProcessedAcquisitionObject" href ="#processedacquisitionobject">nidm:'Processed Acquisition Object'</a>, <a title="RawAcquisitionObject" href ="#rawacquisitionobject">nidm:'Raw Acquisition Object'</a>, <a title="ReconstructedAcquisitionObject" href ="#reconstructedacquisitionobject">nidm:'Reconstructed Acquisition Object'</a>, <a title="assessment-instrument" href ="./onli.html#assessment-instrument">onli:assessment-instrument</a>, <a title="instrument-variable" href ="./onli.html#instrument-variable">onli:instrument-variable</a>.</p><p>Type: Class</p><p>Curation Status: obo:'requires discussion'</p><p>Editor: http://purl.org/nicholsn/card.ttl</p>
                 </div>
             </section>
             <!-- nidm:'Acquisition Object Quality' (AcquisitionObjectQuality) -->
