SubclassOf fixes and SIO descriptions

--- a/dicom.html
+++ b/dicom.html
@@ -297,7 +297,7 @@
             <section id="dicom_xxxx0024">
                 <h1 label="dicom_xxxx0024">dicom:'Multi-frame Image'</h1>
                 <div class="glossary-ref">
-                    <a title="dicom_xxxx0024" href ="#dicom_xxxx0024"><dfn title="dicom_xxxx0024" href ="#dicom_xxxx0024">dicom:'Multi-frame Image'</dfn></a>: Image that contains multiple two-dimensional pixel planes.<p> <a title="dicom_xxxx0024" href ="#dicom_xxxx0024">dicom:'Multi-frame Image'</a> is.</p><p>Type: Class</p><p>Curation Status: obo:IAO_0000428</p>
+                    <a title="dicom_xxxx0024" href ="#dicom_xxxx0024"><dfn title="dicom_xxxx0024" href ="#dicom_xxxx0024">dicom:'Multi-frame Image'</dfn></a>: Image that contains multiple two-dimensional pixel planes.<p> <a title="dicom_xxxx0024" href ="#dicom_xxxx0024">dicom:'Multi-frame Image'</a> is a <a title="Image" href ="./dct.html#image">dct:Image</a>.</p><p>Type: Class</p><p>Curation Status: obo:IAO_0000428</p>
                 </div>
             </section>
             <!-- dicom:'Normalized IOD' (dicom_xxxx0025) -->
@@ -444,7 +444,7 @@
             <section id="dicom_xxxx0048">
                 <h1 label="dicom_xxxx0048">dicom:'Pixel Data'</h1>
                 <div class="glossary-ref">
-                    <a title="dicom_xxxx0048" href ="#dicom_xxxx0048"><dfn title="dicom_xxxx0048" href ="#dicom_xxxx0048">dicom:'Pixel Data'</dfn></a>: Graphical data (e.g., images) of variable pixel-depth encoded in the Pixel Data, Float Pixel Data or Double Float Pixel Data Element.<p> <a title="dicom_xxxx0048" href ="#dicom_xxxx0048">dicom:'Pixel Data'</a> is.</p><p>Type: Class</p><p>Curation Status: obo:IAO_0000428</p>
+                    <a title="dicom_xxxx0048" href ="#dicom_xxxx0048"><dfn title="dicom_xxxx0048" href ="#dicom_xxxx0048">dicom:'Pixel Data'</dfn></a>: Graphical data (e.g., images) of variable pixel-depth encoded in the Pixel Data, Float Pixel Data or Double Float Pixel Data Element.<p> <a title="dicom_xxxx0048" href ="#dicom_xxxx0048">dicom:'Pixel Data'</a> is a <a title="Image" href ="./dct.html#image">dct:Image</a>.</p><p>Type: Class</p><p>Curation Status: obo:IAO_0000428</p>
                 </div>
             </section>
             <!-- dicom:'Pixel Sample Value' (dicom_xxxx0049) -->
