--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                 <div class="attributes" id="attributes-nidm:'Session Object'"> A <a title="SessionObject" href ="#sessionobject">nidm:'Session Object'</a> has attributes:
                 <ul>
                     <li><span class="attribute" id="nidm:'Session Object'.label">rdfs:label</span>:                     (<em class="rfc2119" title="OPTIONAL">OPTIONAL</em>) Human readable description of the <a title="SessionObject" href ="#sessionobject">nidm:'Session Object'</a>.</li>
-                        <li><a title="hasPart" href ="http://purl.org/dc/terms/hasPart"><dfn title="hasPart" href ="http://purl.org/dc/terms/hasPart">dct:hasPart</dfn></a></span>: (<em class="rfc2119" title="OPTIONAL">OPTIONAL</em>) 
+                        <li><a title="hasPart" href ="./dct.html#haspart"><dfn title="hasPart" href ="./dct.html#haspart">dct:hasPart</dfn></a></span>: (<em class="rfc2119" title="OPTIONAL">OPTIONAL</em>) 
                 </ul>
                 </div>
             </section>
