--- a/obo.html
+++ b/obo.html
@@ -45,14 +45,14 @@
             <section id="obi_0302729">
                 <h1 label="OBI_0302729">obo:'chemical solution'</h1>
                 <div class="glossary-ref">
-                    <a title="OBI_0302729" href ="#obi_0302729"><dfn title="OBI_0302729" href ="#obi_0302729">obo:'chemical solution'</dfn></a>: A material entity  that is made up of at least 2 scattered molecular aggregates, one playing the role of solvent and the other one playing the role of solute.<p> <a title="OBI_0302729" href ="#obi_0302729">obo:'chemical solution'</a> is a <a title="SIO_010004" href ="./sio.html#sio_010004">sio:SIO_010004</a>.</p><p>Type: Class</p><p>Curation Status: obo:'ready for release'</p><p>Editor: PERSON: Bjoern Peters</p>
+                    <a title="OBI_0302729" href ="#obi_0302729"><dfn title="OBI_0302729" href ="#obi_0302729">obo:'chemical solution'</dfn></a>: A material entity  that is made up of at least 2 scattered molecular aggregates, one playing the role of solvent and the other one playing the role of solute.<p> <a title="OBI_0302729" href ="#obi_0302729">obo:'chemical solution'</a> is a <a title="SIO_010004" href ="./sio.html#sio_010004">sio:SIO_010004</a>.</p><p>Type: Class</p><p>Curation Status: obo:'ready for release'</p><p>Editor: PERSON: Philippe Rocca-Serra</p>
                 </div>
             </section>
             <!-- obo:'computer' (OBI_0400107) -->
             <section id="obi_0400107">
                 <h1 label="OBI_0400107">obo:'computer'</h1>
                 <div class="glossary-ref">
-                    <a title="OBI_0400107" href ="#obi_0400107"><dfn title="OBI_0400107" href ="#obi_0400107">obo:'computer'</dfn></a>: A computer is an instrument which manipulates (stores, retrieves, and processes) data according to a list of instructions.<p> <a title="OBI_0400107" href ="#obi_0400107">obo:'computer'</a> is and  has the following children: <a title="OBI_0000636" href ="#obi_0000636">obo:'acquisition computer'</a>, <a title="OBI_0001092" href ="#obi_0001092">obo:'computer cluster'</a>.</p><p>Type: Class</p><p>Curation Status: obo:'ready for release'</p><p>Editor: Trish Whetzel</p>
+                    <a title="OBI_0400107" href ="#obi_0400107"><dfn title="OBI_0400107" href ="#obi_0400107">obo:'computer'</dfn></a>: A computer is an instrument which manipulates (stores, retrieves, and processes) data according to a list of instructions.<p> <a title="OBI_0400107" href ="#obi_0400107">obo:'computer'</a> is a <a title="SIO_000956" href ="./sio.html#sio_000956">sio:SIO_000956</a> and  has the following children: <a title="OBI_0000636" href ="#obi_0000636">obo:'acquisition computer'</a>, <a title="OBI_0001092" href ="#obi_0001092">obo:'computer cluster'</a>.</p><p>Type: Class</p><p>Curation Status: obo:'ready for release'</p><p>Editor: Trish Whetzel</p>
                 </div>
                 </ul>
                 </div>
@@ -62,7 +62,7 @@
             <section id="pato_0000001">
                 <h1 label="PATO_0000001">obo:'quality'</h1>
                 <div class="glossary-ref">
-                    <a title="PATO_0000001" href ="#pato_0000001"><dfn title="PATO_0000001" href ="#pato_0000001">obo:'quality'</dfn></a>: A dependent entity that inheres in a bearer by virtue of how the bearer is related to other entities.<p> <a title="PATO_0000001" href ="#pato_0000001">obo:'quality'</a> is and  has the following child: <a title="PATO_0001241" href ="#pato_0001241">obo:'physical object quality'</a>.</p><p>Type: Class</p><p>Curation Status: obo:'uncurated'</p>
+                    <a title="PATO_0000001" href ="#pato_0000001"><dfn title="PATO_0000001" href ="#pato_0000001">obo:'quality'</dfn></a>: A dependent entity that inheres in a bearer by virtue of how the bearer is related to other entities.<p> <a title="PATO_0000001" href ="#pato_0000001">obo:'quality'</a> is a <a title="SIO_000614" href ="./sio.html#sio_000614">sio:SIO_000614</a> and  has the following child: <a title="PATO_0001241" href ="#pato_0001241">obo:'physical object quality'</a>.</p><p>Type: Class</p><p>Curation Status: obo:'uncurated'</p>
                 </div>
             </section>
             <!-- obo:'biological sex' (PATO_0000047) -->
