--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <section id="definitions">
         
             <h1>NIDM-Experiment: Types and relations</h1>
-        <a href='#Classes'>Classes</a> | <a href='#datatypeproperties'>Datatype Properties</a> | <a href='#objectproperties'>Object Properties</a> | <a href='#namedindividuals'>Named Individuals</a><h1 id='Classes'>Classes</h1>
+        <a href='#classes'>Classes</a> | <a href='#datatypeproperties'>Datatype Properties</a> | <a href='#objectproperties'>Object Properties</a> | <a href='#namedindividuals'>Named Individuals</a><h1 id='classes'>Classes</h1>
             <!-- nidm:'Acquisition' (Acquisition) -->
             <section id="acquisition">
                 <h2 label="Acquisition">nidm:'Acquisition'</h2>
