--- a/obo.html
+++ b/obo.html
@@ -26,7 +26,7 @@
         <section id="definitions">
         
             <h1>OBO: Types and relations</h1>
-        <a href='#Classes'>Classes</a> | <a href='#annotationproperties'>Annotation Properties</a> | <a href='#objectproperties'>Object Properties</a> | <a href='#namedindividuals'>Named Individuals</a><h1 id='Classes'>Classes</h1>
+        <a href='#classes'>Classes</a> | <a href='#annotationproperties'>Annotation Properties</a> | <a href='#objectproperties'>Object Properties</a> | <a href='#namedindividuals'>Named Individuals</a><h1 id='classes'>Classes</h1>
             <!-- obo:'acquisition computer' (OBI_0000636) -->
             <section id="obi_0000636">
                 <h2 label="OBI_0000636">obo:'acquisition computer'</h2>
@@ -202,14 +202,14 @@
             <section id="iao_0000114">
                 <h2 label="IAO_0000114">obo:'has curation status'</h2>
                 <div class="glossary-ref">
-                    <a title="IAO_0000114" href ="#iao_0000114"><dfn title="IAO_0000114" href ="#iao_0000114">obo:'has curation status'</dfn></a>: <p><a title="IAO_0000114" href ="#iao_0000114">obo:'has curation status'</a> is a <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a>.</p><p>Type: <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a><p>Curation Status: <a title="IAO_0000124" href ="#iao_0000124">obo:'uncurated'</a></p><p>Editor: PERSON:Bill Bug
+                    <a title="IAO_0000114" href ="#iao_0000114"><dfn title="IAO_0000114" href ="#iao_0000114">obo:'has curation status'</dfn></a>: <p><a title="IAO_0000114" href ="#iao_0000114">obo:'has curation status'</a> is a <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a>.</p><p>Type: <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a><p>Curation Status: <a title="IAO_0000124" href ="#iao_0000124">obo:'uncurated'</a></p><p>Editor: PERSON:Alan Ruttenberg
                 </div>
             </section>
             <!-- obo:'definition' (IAO_0000115) -->
             <section id="iao_0000115">
                 <h2 label="IAO_0000115">obo:'definition'</h2>
                 <div class="glossary-ref">
-                    <a title="IAO_0000115" href ="#iao_0000115"><dfn title="IAO_0000115" href ="#iao_0000115">obo:'definition'</dfn></a>: The official OBI definition, explaining the meaning of a class or property. Shall be Aristotelian, formalized and normalized. Can be augmented with colloquial definitions.<p><a title="IAO_0000115" href ="#iao_0000115">obo:'definition'</a> is a <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a>.</p><p>Type: <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a><p>Curation Status: <a title="IAO_0000122" href ="#iao_0000122">obo:'ready for release'</a></p><p>Editor: PERSON:Daniel Schober
+                    <a title="IAO_0000115" href ="#iao_0000115"><dfn title="IAO_0000115" href ="#iao_0000115">obo:'definition'</dfn></a>: The official definition, explaining the meaning of a class or property. Shall be Aristotelian, formalized and normalized. Can be augmented with colloquial definitions.<p><a title="IAO_0000115" href ="#iao_0000115">obo:'definition'</a> is a <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a>.</p><p>Type: <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a><p>Curation Status: <a title="IAO_0000122" href ="#iao_0000122">obo:'ready for release'</a></p><p>Editor: PERSON:Daniel Schober
                 </div>
             </section>
             <!-- obo:'editor note' (IAO_0000116) -->
