--- a/bids.html
+++ b/bids.html
@@ -26,7 +26,7 @@
         <section id="definitions">
         
             <h1>BIDS: Types and relations</h1>
-        <a href='#Classes'>Classes</a> | <a href='#datatypeproperties'>Datatype Properties</a> | <a href='#annotationproperties'>Annotation Properties</a><h1 id='Classes'>Classes</h1>
+        <a href='#classes'>Classes</a> | <a href='#datatypeproperties'>Datatype Properties</a> | <a href='#annotationproperties'>Annotation Properties</a><h1 id='classes'>Classes</h1>
             <!-- bids:'Acquisition' (Acquisition) -->
             <section id="acquisition">
                 <h2 label="Acquisition">bids:'Acquisition'</h2>
@@ -444,7 +444,7 @@
             <section id="anatomicallandmarkcoordinates">
                 <h2 label="AnatomicalLandmarkCoordinates">bids:'AnatomicalLandmarkCoordinates'</h2>
                 <div class="glossary-ref">
-                    <a title="AnatomicalLandmarkCoordinates" href ="#anatomicallandmarkcoordinates"><dfn title="AnatomicalLandmarkCoordinates" href ="#anatomicallandmarkcoordinates">bids:'AnatomicalLandmarkCoordinates'</dfn></a>: OPTIONAL. Key:value pairs of the labels and 3-D digitized locations of anatomical landmarks, interpreted following the AnatomicalLandmarkCoordinateSystem, e.g., {NAS: [12.7,21.3,13.9], LPA: [5.2,11.3,9.6], RPA: [20.2,11.3,9.1]}.<p><a title="AnatomicalLandmarkCoordinates" href ="#anatomicallandmarkcoordinates">bids:'AnatomicalLandmarkCoordinates'</a> is a <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>.</p><p>Type: <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p><p>Editor Note: To be discussed</p>
+                    <a title="AnatomicalLandmarkCoordinates" href ="#anatomicallandmarkcoordinates"><dfn title="AnatomicalLandmarkCoordinates" href ="#anatomicallandmarkcoordinates">bids:'AnatomicalLandmarkCoordinates'</dfn></a>: RECOMMENDED. Key:value pairs of any number of additional anatomical landmarks and their coordinates in voxel units (where first voxel has index 0,0,0) relative to the associated anatomical MRI, (e.g. {AC: [127,119,149], PC: [128,93,141], IH: [131,114,206]}, or {NAS: [127,213,139], LPA: [52,113,96], RPA: [202,113,91]}).<p><a title="AnatomicalLandmarkCoordinates" href ="#anatomicallandmarkcoordinates">bids:'AnatomicalLandmarkCoordinates'</a> is a <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>.</p><p>Type: <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p><p>Editor Note: To be discussed</p>
                 </div>
             </section>
             <!-- bids:'AssociatedEmptyRoom' (AssociatedEmptyRoom) -->
@@ -640,7 +640,7 @@
             <section id="eegreference">
                 <h2 label="EEGReference">bids:'EEGReference'</h2>
                 <div class="glossary-ref">
-                    <a title="EEGReference" href ="#eegreference"><dfn title="EEGReference" href ="#eegreference">bids:'EEGReference'</dfn></a>: REQUIRED. General description of the reference scheme used and (when applicable) of location of the reference electrode in the raw recordings (e.g., left mastoid, Cz, CMS). If different channels have a different reference, this field should have a general description and the channel specific reference should be defined in the channels.tsv file.<p><a title="EEGReference" href ="#eegreference">bids:'EEGReference'</a> is a <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>.</p><p>Type: <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p><p>Editor Note: To be discussed</p>
+                    <a title="EEGReference" href ="#eegreference"><dfn title="EEGReference" href ="#eegreference">bids:'EEGReference'</dfn></a>: OPTIONAL. Description of the type of EEG reference used (e.g., M1 for left mastoid, average, or longitudinal bipolar).<p><a title="EEGReference" href ="#eegreference">bids:'EEGReference'</a> is a <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>.</p><p>Type: <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p><p>Editor Note: To be discussed</p>
                 </div>
             </section>
             <!-- bids:'EMGChannelCount' (EMGChannelCount) -->
@@ -1074,7 +1074,7 @@
             <section id="seegchannelcount">
                 <h2 label="SEEGChannelCount">bids:'SEEGChannelCount'</h2>
                 <div class="glossary-ref">
-                    <a title="SEEGChannelCount" href ="#seegchannelcount"><dfn title="SEEGChannelCount" href ="#seegchannelcount">bids:'SEEGChannelCount'</dfn></a>: RECOMMENDED. Number of iEEG depth channels included in the recording (e.g., 8).<p><a title="SEEGChannelCount" href ="#seegchannelcount">bids:'SEEGChannelCount'</a> is a <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>.</p><p>Type: <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a><p>Same as: <a title="NumberOfChannels" href ="./index.html#numberofchannels">nidm:NumberOfChannels</a></p><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p><p>Editor Note: To be discussed</p>
+                    <a title="SEEGChannelCount" href ="#seegchannelcount"><dfn title="SEEGChannelCount" href ="#seegchannelcount">bids:'SEEGChannelCount'</dfn></a>: RECOMMENDED. Number of SEEG channels.<p><a title="SEEGChannelCount" href ="#seegchannelcount">bids:'SEEGChannelCount'</a> is a <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>.</p><p>Type: <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a><p>Same as: <a title="NumberOfChannels" href ="./index.html#numberofchannels">nidm:NumberOfChannels</a></p><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p><p>Editor Note: To be discussed</p>
                 </div>
             </section>
             <!-- bids:'SamplingFrequency' (SamplingFrequency) -->
@@ -1186,7 +1186,7 @@
             <section id="triggerchannelcount">
                 <h2 label="TriggerChannelCount">bids:'TriggerChannelCount'</h2>
                 <div class="glossary-ref">
-                    <a title="TriggerChannelCount" href ="#triggerchannelcount"><dfn title="TriggerChannelCount" href ="#triggerchannelcount">bids:'TriggerChannelCount'</dfn></a>: RECOMMENDED. Number of channels for digital (TTL bit level) trigger.<p><a title="TriggerChannelCount" href ="#triggerchannelcount">bids:'TriggerChannelCount'</a> is a <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>.</p><p>Type: <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a><p>Same as: <a title="NumberOfChannels" href ="./index.html#numberofchannels">nidm:NumberOfChannels</a></p><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p><p>Editor Note: To be discussed</p>
+                    <a title="TriggerChannelCount" href ="#triggerchannelcount"><dfn title="TriggerChannelCount" href ="#triggerchannelcount">bids:'TriggerChannelCount'</dfn></a>: RECOMMENDED. Number of channels for digital (TTL bit level) triggers.<p><a title="TriggerChannelCount" href ="#triggerchannelcount">bids:'TriggerChannelCount'</a> is a <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>.</p><p>Type: <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a><p>Same as: <a title="NumberOfChannels" href ="./index.html#numberofchannels">nidm:NumberOfChannels</a></p><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p><p>Editor Note: To be discussed</p>
                 </div>
             </section>
             <!-- bids:'VolumeTiming' (VolumeTiming) -->
