--- a/onli.html
+++ b/onli.html
@@ -26,7 +26,7 @@
         <section id="definitions">
         
             <h1>ONLI: Types and relations</h1>
-        <a href='#Classes'>Classes</a><h1 id='Classes'>Classes</h1>
+        <a href='#classes'>Classes</a><h1 id='classes'>Classes</h1>
             <!-- onli:assessment-instrument (assessment-instrument) -->
             <section id="assessment-instrument">
                 <h2 label="assessment-instrument">onli:assessment-instrument</h2>
@@ -65,14 +65,14 @@ ASSESSMENT INSTRUMENTS are divided among MONO-DOMAIN INSTRUMENTS and MULTI-DOMAI
                 <h2 label="bi-coded-scale-item">onli:bi-coded-scale-item</h2>
                 <div class="glossary-ref">
                     <a title="bi-coded-scale-item" href ="#bi-coded-scale-item"><dfn title="bi-coded-scale-item" href ="#bi-coded-scale-item">onli:bi-coded-scale-item</dfn></a>: A BI-CODED SCALE ITEM refers both to a qualitative value of the measured QUALITY associated to a quantitative value. Generally the behavior rating scales are built with a set of BI-CODED SCALE ITEM. The rater must decide whether the rating lies on the defined QUANTITATIVE SCALE ITEMS, which are associated with QUALITATIVE SCALE ITEMS. 
-Example: The INSTRUMENT 'Clinical Dementia Rating scale' explores the severity of dementia among the patients. The CODED VARIABLE of the INSTRUMENT 'Clinical Dementia Rating scale' which measures the QUALITY 'Severity of dementia' has for scale a SCALE in whom, each BI-CODED ITEM SCALE refers both to a particular severity of the dementia by a quantitative way with the following QUANTITATIVE SCALE ITEMS (0, 0.5, 1, 2, 3) and to a particular severity of the dementia (meaning) by a qualitative way with the following QUALITATIVE SCALE ITEM ('No evidence of dementia', 'Questionable dementia', 'Mild dementia', 'Moderate dementia', 'Severe dementia').<p><a title="bi-coded-scale-item" href ="#bi-coded-scale-item">onli:bi-coded-scale-item</a> is a <a title="quantitative-scale-item" href ="#quantitative-scale-item">onli:quantitative-scale-item</a>.</p><p>Type: <a title="Class" href ="http://www.w3.org/2002/07/owl#Class">owl:Class</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+Example: The INSTRUMENT 'Clinical Dementia Rating scale' explores the severity of dementia among the patients. The CODED VARIABLE of the INSTRUMENT 'Clinical Dementia Rating scale' which measures the QUALITY 'Severity of dementia' has for scale a SCALE in whom, each BI-CODED ITEM SCALE refers both to a particular severity of the dementia by a quantitative way with the following QUANTITATIVE SCALE ITEMS (0, 0.5, 1, 2, 3) and to a particular severity of the dementia (meaning) by a qualitative way with the following QUALITATIVE SCALE ITEM ('No evidence of dementia', 'Questionable dementia', 'Mild dementia', 'Moderate dementia', 'Severe dementia').<p><a title="bi-coded-scale-item" href ="#bi-coded-scale-item">onli:bi-coded-scale-item</a> is a <a title="qualitative-scale-item" href ="#qualitative-scale-item">onli:qualitative-scale-item</a>.</p><p>Type: <a title="Class" href ="http://www.w3.org/2002/07/owl#Class">owl:Class</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
             <!-- onli:coded-score (coded-score) -->
             <section id="coded-score">
                 <h2 label="coded-score">onli:coded-score</h2>
                 <div class="glossary-ref">
-                    <a title="coded-score" href ="#coded-score"><dfn title="coded-score" href ="#coded-score">onli:coded-score</dfn></a>: <p><a title="coded-score" href ="#coded-score">onli:coded-score</a> is a <a title="scale-item" href ="#scale-item">onli:scale-item</a>.</p><p>Type: <a title="Class" href ="http://www.w3.org/2002/07/owl#Class">owl:Class</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="coded-score" href ="#coded-score"><dfn title="coded-score" href ="#coded-score">onli:coded-score</dfn></a>: <p><a title="coded-score" href ="#coded-score">onli:coded-score</a> is a <a title="score" href ="#score">onli:score</a>.</p><p>Type: <a title="Class" href ="http://www.w3.org/2002/07/owl#Class">owl:Class</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
             <!-- onli:coded-variable (coded-variable) -->
