--- a/sio.html
+++ b/sio.html
@@ -26,7 +26,7 @@
         <section id="definitions">
         
             <h1>SIO: Types and relations</h1>
-        <a href='#Classes'>Classes</a> | <a href='#datatypeproperties'>Datatype Properties</a> | <a href='#annotationproperties'>Annotation Properties</a> | <a href='#objectproperties'>Object Properties</a><h1 id='Classes'>Classes</h1>
+        <a href='#classes'>Classes</a> | <a href='#datatypeproperties'>Datatype Properties</a> | <a href='#annotationproperties'>Annotation Properties</a> | <a href='#objectproperties'>Object Properties</a><h1 id='classes'>Classes</h1>
             <!-- sio:'material entity' (SIO_000004) -->
             <section id="sio_000004">
                 <h2 label="SIO_000004">sio:'material entity'</h2>
@@ -682,7 +682,7 @@
             <section id="sio_000300">
                 <h2 label="SIO_000300">sio:'has value'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_000300" href ="#sio_000300"><dfn title="SIO_000300" href ="#sio_000300">sio:'has value'</dfn></a>: A relation between a informational entity and its actual value (numeric, date, text, etc).<p><a title="SIO_000300" href ="#sio_000300">sio:'has value'</a> is a <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a>, <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>.</p><p>Type: <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a>, <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_000300" href ="#sio_000300"><dfn title="SIO_000300" href ="#sio_000300">sio:'has value'</dfn></a>: A relation between a informational entity and its actual value (numeric, date, text, etc).<p><a title="SIO_000300" href ="#sio_000300">sio:'has value'</a> is a <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>, <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a>.</p><p>Type: <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>, <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section><h1 id='annotationproperties'>Annotation Properties</h1>
             <!-- sio:equivalentTo (equivalentTo) -->
@@ -717,7 +717,7 @@
             <section id="sio_000001">
                 <h2 label="SIO_000001">sio:'is related to'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_000001" href ="#sio_000001"><dfn title="SIO_000001" href ="#sio_000001">sio:'is related to'</dfn></a>: A is related to B iff there is some relation between A and B.<p><a title="SIO_000001" href ="#sio_000001">sio:'is related to'</a> is a <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>, <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a>.</p><p>Type: <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>, <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_000001" href ="#sio_000001"><dfn title="SIO_000001" href ="#sio_000001">sio:'is related to'</dfn></a>: A is related to B iff there is some relation between A and B.<p><a title="SIO_000001" href ="#sio_000001">sio:'is related to'</a> is a <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a>, <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>.</p><p>Type: <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a>, <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
             <!-- sio:'has attribute' (SIO_000008) -->
@@ -766,7 +766,7 @@
             <section id="sio_001242">
                 <h2 label="SIO_001242">sio:'is identical to'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_001242" href ="#sio_001242"><dfn title="SIO_001242" href ="#sio_001242">sio:'is identical to'</dfn></a>: Is identical to is a relation between two objects that are conceptually the same notwithstanding provenance or other non-intrinsic attributes.<p><a title="SIO_001242" href ="#sio_001242">sio:'is identical to'</a> is a <a title="SIO_000736" href ="#sio_000736">sio:'is comparable to'</a>.</p><p>Type: <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a>, <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_001242" href ="#sio_001242"><dfn title="SIO_001242" href ="#sio_001242">sio:'is identical to'</dfn></a>: Is identical to is a relation between two objects that are conceptually the same notwithstanding provenance or other non-intrinsic attributes.<p><a title="SIO_001242" href ="#sio_001242">sio:'is identical to'</a> is a <a title="SIO_000736" href ="#sio_000736">sio:'is comparable to'</a>.</p><p>Type: <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>, <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
 	</section>
