--- a/obo.html
+++ b/obo.html
@@ -52,7 +52,7 @@
             <section id="obi_0400107">
                 <h2 label="OBI_0400107">obo:'computer'</h2>
                 <div class="glossary-ref">
-                    <a title="OBI_0400107" href ="#obi_0400107"><dfn title="OBI_0400107" href ="#obi_0400107">obo:'computer'</dfn></a>: A computer is an instrument which manipulates (stores, retrieves, and processes) data according to a list of instructions.<p><a title="OBI_0400107" href ="#obi_0400107">obo:'computer'</a> is a <a title="SIO_000956" href ="./sio.html#sio_000956">sio:SIO_000956</a> and  has the following children: <a title="OBI_0000636" href ="#obi_0000636">obo:'acquisition computer'</a>, <a title="OBI_0001092" href ="#obi_0001092">obo:'computer cluster'</a>.</p><p>Type: <a title="Class" href ="http://www.w3.org/2002/07/owl#Class">owl:Class</a><p>Curation Status: <a title="IAO_0000122" href ="#iao_0000122">obo:'ready for release'</a></p><p>Editor: Melanie Courtot
+                    <a title="OBI_0400107" href ="#obi_0400107"><dfn title="OBI_0400107" href ="#obi_0400107">obo:'computer'</dfn></a>: A computer is an instrument which manipulates (stores, retrieves, and processes) data according to a list of instructions.<p><a title="OBI_0400107" href ="#obi_0400107">obo:'computer'</a> is a <a title="SIO_000956" href ="./sio.html#sio_000956">sio:SIO_000956</a> and  has the following children: <a title="OBI_0000636" href ="#obi_0000636">obo:'acquisition computer'</a>, <a title="OBI_0001092" href ="#obi_0001092">obo:'computer cluster'</a>.</p><p>Type: <a title="Class" href ="http://www.w3.org/2002/07/owl#Class">owl:Class</a><p>Curation Status: <a title="IAO_0000122" href ="#iao_0000122">obo:'ready for release'</a></p><p>Editor: Trish Whetzel
                 </div>
                 </ul>
                 </div>
@@ -202,7 +202,7 @@
             <section id="iao_0000114">
                 <h2 label="IAO_0000114">obo:'has curation status'</h2>
                 <div class="glossary-ref">
-                    <a title="IAO_0000114" href ="#iao_0000114"><dfn title="IAO_0000114" href ="#iao_0000114">obo:'has curation status'</dfn></a>: <p><a title="IAO_0000114" href ="#iao_0000114">obo:'has curation status'</a> is a <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a>.</p><p>Type: <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a><p>Curation Status: <a title="IAO_0000124" href ="#iao_0000124">obo:'uncurated'</a></p><p>Editor: PERSON:Bill Bug
+                    <a title="IAO_0000114" href ="#iao_0000114"><dfn title="IAO_0000114" href ="#iao_0000114">obo:'has curation status'</dfn></a>: <p><a title="IAO_0000114" href ="#iao_0000114">obo:'has curation status'</a> is a <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a>.</p><p>Type: <a title="AnnotationProperty" href ="http://www.w3.org/2002/07/owl#AnnotationProperty">owl:AnnotationProperty</a><p>Curation Status: <a title="IAO_0000124" href ="#iao_0000124">obo:'uncurated'</a></p><p>Editor: PERSON:Alan Ruttenberg
                 </div>
             </section>
             <!-- obo:'definition' (IAO_0000115) -->
