--- a/sio.html
+++ b/sio.html
@@ -241,7 +241,7 @@
             <section id="sio_000179">
                 <h2 label="SIO_000179">sio:'label'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_000179" href ="#sio_000179"><dfn title="SIO_000179" href ="#sio_000179">sio:'label'</dfn></a>: A label is a term that is associated with some entity.<p><a title="SIO_000179" href ="#sio_000179">sio:'label'</a> is a <a title="SIO_000651" href ="#sio_000651">sio:'textual entity'</a> and  has the following children: <a title="SIO_000115" href ="#sio_000115">sio:'identifier'</a>, <a title="SIO_000179" href ="#sio_000179">sio:'label'</a>, <a title="SIO_000116" href ="#sio_000116">sio:'name'</a>.</p><p>Type: <a title="Class" href ="http://www.w3.org/2002/07/owl#Class">owl:Class</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_000179" href ="#sio_000179"><dfn title="SIO_000179" href ="#sio_000179">sio:'label'</dfn></a>: A label is a term that is associated with some entity.<p><a title="SIO_000179" href ="#sio_000179">sio:'label'</a> is a <a title="SIO_000179" href ="#sio_000179">sio:'label'</a> and  has the following children: <a title="SIO_000115" href ="#sio_000115">sio:'identifier'</a>, <a title="SIO_000179" href ="#sio_000179">sio:'label'</a>, <a title="SIO_000116" href ="#sio_000116">sio:'name'</a>.</p><p>Type: <a title="Class" href ="http://www.w3.org/2002/07/owl#Class">owl:Class</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
             <!-- sio:'first name' (SIO_000181) -->
@@ -682,7 +682,7 @@
             <section id="sio_000300">
                 <h2 label="SIO_000300">sio:'has value'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_000300" href ="#sio_000300"><dfn title="SIO_000300" href ="#sio_000300">sio:'has value'</dfn></a>: A relation between a informational entity and its actual value (numeric, date, text, etc).<p><a title="SIO_000300" href ="#sio_000300">sio:'has value'</a> is a <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>, <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a>.</p><p>Type: <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>, <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_000300" href ="#sio_000300"><dfn title="SIO_000300" href ="#sio_000300">sio:'has value'</dfn></a>: A relation between a informational entity and its actual value (numeric, date, text, etc).<p><a title="SIO_000300" href ="#sio_000300">sio:'has value'</a> is a <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a>, <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a>.</p><p>Type: <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a>, <a title="DatatypeProperty" href ="http://www.w3.org/2002/07/owl#DatatypeProperty">owl:DatatypeProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section><h1 id='annotationproperties'>Annotation Properties</h1>
             <!-- sio:equivalentTo (equivalentTo) -->
@@ -717,7 +717,7 @@
             <section id="sio_000001">
                 <h2 label="SIO_000001">sio:'is related to'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_000001" href ="#sio_000001"><dfn title="SIO_000001" href ="#sio_000001">sio:'is related to'</dfn></a>: A is related to B iff there is some relation between A and B.<p><a title="SIO_000001" href ="#sio_000001">sio:'is related to'</a> is a <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>, <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a>.</p><p>Type: <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>, <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_000001" href ="#sio_000001"><dfn title="SIO_000001" href ="#sio_000001">sio:'is related to'</dfn></a>: A is related to B iff there is some relation between A and B.<p><a title="SIO_000001" href ="#sio_000001">sio:'is related to'</a> is a <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a>, <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>.</p><p>Type: <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a>, <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
             <!-- sio:'has attribute' (SIO_000008) -->
@@ -731,7 +731,7 @@
             <section id="sio_000059">
                 <h2 label="SIO_000059">sio:'has member'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_000059" href ="#sio_000059"><dfn title="SIO_000059" href ="#sio_000059">sio:'has member'</dfn></a>: Has member is a mereological relation between a collection and an item.<p><a title="SIO_000059" href ="#sio_000059">sio:'has member'</a> is a <a title="SIO_000008" href ="#sio_000008">sio:'has attribute'</a>.</p><p>Type: <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>, <a title="IrreflexiveProperty" href ="http://www.w3.org/2002/07/owl#IrreflexiveProperty">owl:IrreflexiveProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_000059" href ="#sio_000059"><dfn title="SIO_000059" href ="#sio_000059">sio:'has member'</dfn></a>: Has member is a mereological relation between a collection and an item.<p><a title="SIO_000059" href ="#sio_000059">sio:'has member'</a> is a <a title="SIO_000008" href ="#sio_000008">sio:'has attribute'</a>.</p><p>Type: <a title="IrreflexiveProperty" href ="http://www.w3.org/2002/07/owl#IrreflexiveProperty">owl:IrreflexiveProperty</a>, <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
             <!-- sio:'represents' (SIO_000210) -->
@@ -745,7 +745,7 @@
             <section id="sio_000221">
                 <h2 label="SIO_000221">sio:'has unit'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_000221" href ="#sio_000221"><dfn title="SIO_000221" href ="#sio_000221">sio:'has unit'</dfn></a>: Has unit is a relation between a quantity and the unit it is a multiple of.<p><a title="SIO_000221" href ="#sio_000221">sio:'has unit'</a> is a <a title="SIO_000008" href ="#sio_000008">sio:'has attribute'</a>.</p><p>Type: <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>, <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a><p>Range: sio:SIO_000074 </p><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_000221" href ="#sio_000221"><dfn title="SIO_000221" href ="#sio_000221">sio:'has unit'</dfn></a>: Has unit is a relation between a quantity and the unit it is a multiple of.<p><a title="SIO_000221" href ="#sio_000221">sio:'has unit'</a> is a <a title="SIO_000008" href ="#sio_000008">sio:'has attribute'</a>.</p><p>Type: <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a>, <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a><p>Range: sio:SIO_000074 </p><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
             <!-- sio:'is model of' (SIO_000632) -->
@@ -759,7 +759,7 @@
             <section id="sio_000736">
                 <h2 label="SIO_000736">sio:'is comparable to'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_000736" href ="#sio_000736"><dfn title="SIO_000736" href ="#sio_000736">sio:'is comparable to'</dfn></a>: Is comparable to is a relation between two entities that share at least one feature whose value can be compared.<p><a title="SIO_000736" href ="#sio_000736">sio:'is comparable to'</a> is a <a title="SIO_000001" href ="#sio_000001">sio:'is related to'</a>.</p><p>Type: <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a>, <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_000736" href ="#sio_000736"><dfn title="SIO_000736" href ="#sio_000736">sio:'is comparable to'</dfn></a>: Is comparable to is a relation between two entities that share at least one feature whose value can be compared.<p><a title="SIO_000736" href ="#sio_000736">sio:'is comparable to'</a> is a <a title="SIO_000001" href ="#sio_000001">sio:'is related to'</a>.</p><p>Type: <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>, <a title="SymmetricProperty" href ="http://www.w3.org/2002/07/owl#SymmetricProperty">owl:SymmetricProperty</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
             <!-- sio:'is identical to' (SIO_001242) -->
