--- a/sio.html
+++ b/sio.html
@@ -241,7 +241,7 @@
             <section id="sio_000179">
                 <h2 label="SIO_000179">sio:'label'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_000179" href ="#sio_000179"><dfn title="SIO_000179" href ="#sio_000179">sio:'label'</dfn></a>: A label is a term that is associated with some entity.<p><a title="SIO_000179" href ="#sio_000179">sio:'label'</a> is a <a title="SIO_000179" href ="#sio_000179">sio:'label'</a> and  has the following children: <a title="SIO_000115" href ="#sio_000115">sio:'identifier'</a>, <a title="SIO_000179" href ="#sio_000179">sio:'label'</a>, <a title="SIO_000116" href ="#sio_000116">sio:'name'</a>.</p><p>Type: <a title="Class" href ="http://www.w3.org/2002/07/owl#Class">owl:Class</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_000179" href ="#sio_000179"><dfn title="SIO_000179" href ="#sio_000179">sio:'label'</dfn></a>: A label is a term that is associated with some entity.<p><a title="SIO_000179" href ="#sio_000179">sio:'label'</a> is a <a title="SIO_000651" href ="#sio_000651">sio:'textual entity'</a> and  has the following children: <a title="SIO_000115" href ="#sio_000115">sio:'identifier'</a>, <a title="SIO_000179" href ="#sio_000179">sio:'label'</a>, <a title="SIO_000116" href ="#sio_000116">sio:'name'</a>.</p><p>Type: <a title="Class" href ="http://www.w3.org/2002/07/owl#Class">owl:Class</a><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
             <!-- sio:'first name' (SIO_000181) -->
@@ -745,7 +745,7 @@
             <section id="sio_000221">
                 <h2 label="SIO_000221">sio:'has unit'</h2>
                 <div class="glossary-ref">
-                    <a title="SIO_000221" href ="#sio_000221"><dfn title="SIO_000221" href ="#sio_000221">sio:'has unit'</dfn></a>: Has unit is a relation between a quantity and the unit it is a multiple of.<p><a title="SIO_000221" href ="#sio_000221">sio:'has unit'</a> is a <a title="SIO_000008" href ="#sio_000008">sio:'has attribute'</a>.</p><p>Type: <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a>, <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a><p>Range: sio:SIO_000074 </p><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
+                    <a title="SIO_000221" href ="#sio_000221"><dfn title="SIO_000221" href ="#sio_000221">sio:'has unit'</dfn></a>: Has unit is a relation between a quantity and the unit it is a multiple of.<p><a title="SIO_000221" href ="#sio_000221">sio:'has unit'</a> is a <a title="SIO_000008" href ="#sio_000008">sio:'has attribute'</a>.</p><p>Type: <a title="ObjectProperty" href ="http://www.w3.org/2002/07/owl#ObjectProperty">owl:ObjectProperty</a>, <a title="FunctionalProperty" href ="http://www.w3.org/2002/07/owl#FunctionalProperty">owl:FunctionalProperty</a><p>Range: sio:SIO_000074 </p><p>Curation Status: <a title="IAO_0000124" href ="./obo.html#iao_0000124">obo:IAO_0000124</a></p>
                 </div>
             </section>
             <!-- sio:'is model of' (SIO_000632) -->
